<resources>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="facebook_app_id">385978722180561</string>
    <string name="your_email">Your email</string>
    <string name="email">Email</string>
    <string name="your_password">Your password</string>
    <string name="password">Password</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="LOGIN">LOGIN</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="fb_login_protocol_scheme">fb385978722180561</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_base_navigation_drawer">BaseNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">LOGOUT</string>
    <string name="all_conspectuses">All conspectuses</string>
    <string name="conspectuses">Conspectuses</string>
    <string name="account">Account</string>
    <string name="themes">Themes</string>
    <string name="change_password">Change password</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="save_password">Save password</string>
    <string name="old_password">Old password</string>
    <string name="search">Enter a keyword to search on YouTube</string>
    <string name="failed">Failed to initialize Youtube Player</string>
    <string name="app_name">VideoNotes</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="enter_video_url_from_youtube">Enter video url from youtube</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_rename">Rename</string>
    <string name="cencel">Cencel</string>
</resources>
