<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
android:gravity="center">

    <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/player_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText android:layout_width="200dp" android:layout_height="50dp"
    android:hint="@string/enter_name"
    android:gravity="center"/>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <Button
            android:id="@+id/button_confirm_search_activity"
            android:layout_width="200dp" android:layout_height="50dp"
            android:text="@string/confirm"/>
    <Button
            android:id="@+id/button_cancel_search_activity"
            android:layout_width="200dp" android:layout_height="50dp"
            android:text="@string/cancel"/>
</LinearLayout>
</LinearLayout>