<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <EditText
            android:id="@+id/dialog_editText_name"
            android:layout_width="200dp"
            android:layout_height="40dp"
    android:hint="@string/enter_name"
    android:gravity="center"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/dialog_button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/confirm">
        </Button>
        <Button
                android:id="@+id/dialog_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cancel">
        </Button>
    </LinearLayout>
</LinearLayout>