<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:text="@string/sign_in_with_google"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textStyle="normal|italic"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:id="@+id/sign_in_google_button"/>
    <com.facebook.login.widget.LoginButton
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_with_facebook"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textStyle="normal|italic"
            android:id="@+id/sign_in_facebook_button" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/your_email"
            android:gravity="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_facebook_button" android:id="@+id/editText_your_email"
    />
    <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:gravity="center" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_your_email"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.496" android:id="@+id/editText_your_password"
    />
    <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/LOGIN"
            android:textStyle="normal|italic"
            android:id="@+id/button_login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_your_password"/>
    <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/or"
            android:gravity="center"
            android:textStyle="normal|italic"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.494"
            android:id="@+id/or_textView"
            app:layout_constraintTop_toBottomOf="@+id/button_login"/>
    <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/SIGN_UP"
            android:textStyle="normal|italic"
            android:id="@+id/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintTop_toBottomOf="@+id/or_textView"/>

</androidx.constraintlayout.widget.ConstraintLayout>
