<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:id="@+id/editText_email"
            android:gravity="center" android:layout_marginTop="104dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:id="@+id/editText_username"
            android:gravity="center" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_email" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <EditText
            android:id="@+id/editText_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="center" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_username" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <EditText
            android:id="@+id/editText_retype_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/retype_your_password"
            android:inputType="textPassword"
            android:gravity="center" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_password" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/SIGN_UP"
            android:textStyle="normal|italic"
            android:id="@+id/button_sign_up"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_retype_password" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.494"/>
</androidx.constraintlayout.ConstraintLayout>
