<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:weightSum="9"
                android:orientation="vertical">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/sign_in_with_google"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:textStyle="normal|italic"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/sign_in_with_facebook"
                    android:background="@color/red"
                    android:textColor="@color/white"
                    android:textStyle="normal|italic"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="Your email"
                android:gravity="center"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="Your password"
                    android:inputType="textPassword"
                    android:gravity="center"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
            </LinearLayout>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/LOGIN"
                    android:textStyle="normal|italic"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/or"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="normal|italic"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/SIGN_UP"
                    android:layout_weight="1"
                    android:textStyle="normal|italic"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </LinearLayout>

</LinearLayout>
