<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.UserProfileActivity">
    <ImageView
            android:id="@+id/imageView_user_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:layout_marginTop="68dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/logout"
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>

    <Button
            android:text="@string/change_password"
            android:id="@+id/button_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.268"
            android:layout_marginTop="84dp" app:layout_constraintTop_toBottomOf="@+id/textView_user_display_name"/>

    <TextView
            android:id="@+id/textView_user_display_name"
            android:layout_width="46dp"
            android:layout_height="18dp"
            android:text="wdawd" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_user_email"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.343"/>

    <TextView
            android:id="@+id/textView_user_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="wdawd"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"/>

    <EditText
            android:id="@+id/editText_new_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.434"
            android:hint="@string/password"
            android:layout_marginTop="340dp" app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
    />

    <EditText

            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/editText_retype_new_password"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_new_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.434"
            android:hint="@string/retype_your_password"
            android:visibility="invisible"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_password"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_retype_new_password"
            android:id="@+id/button_save_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.245" app:layout_constraintVertical_bias="0.051"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>